compiler/test/conformance/invalid/inv_continue_outside_loop.tu
// INVÁLIDO: continue fora de qualquer loop (deve reprovar)
fn main() {
  continue
}
